eliminando forward and backward

--- a/index.html
+++ b/index.html
@@ -102,17 +102,15 @@
   <div class="item playPause">
     <!--dropdown-->
     <div id='speed_box'>
-      <label for="animStep0">speed</label>
+      <label for="animStep0" style="margin-right: 2px;">speed</label>
       <select id="animStep0" name="animStep0">
         <option value="0.125">slow</option>
         <option value="0.500">med</option>
         <option value="1.000">fast</option>
       </select>
       <!--play controls-->
-      <div class="play_controls">
-        <button class="fa fa-backward" id="backward"></button>
+      <div class="play_controls ">
         <button class="fa fa-play-circle-o" id="play_pause"></button>
-        <button class="fa fa-forward" id="forward"></button>
       </div>
       <!--end play contorls-->
     </div>
