improving play_pause style

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <div class="item playPause">
     <!--dropdown-->
     <div id='speed_box'>
-      <label for="animStep0" style="font-size: 14px;margin-right: 2px;">speed</label>
+      <label for="animStep0" style="font-size: 14px;margin-right: 3px;margin-left: 3px;">speed</label>
       <select id="animStep0" style='font-size: 11px;' name="animStep0">
         <option value="0.125">slow</option>
         <option value="0.500">med</option>
