--- a/index.html
+++ b/index.html
@@ -39,20 +39,21 @@
 </head>
 
 <body oncontextmenu="return false;">
-  
+  <script src="dicts.js"></script>
   <script src="math.js"></script>
   <script src="colors.js"></script>
   <script src="colors_crayola.js"></script>
   <script src="poly.js"></script>
   <script src="ui.js"></script>
+  <script src="poncelet.js"></script>
+  <script src="circles.js"></script>
   <script src="triangles.js"></script>
   <script src="trilins_barys.js"></script> 
   <script src="xn_1k.js"></script>
-  <script src="poncelet.js"></script>
   <script src="symmedian.js"></script>
   <script src="caustic.js"></script>
   <script src="export.js"></script>
-  <script src="circles.js"></script>
+
   <script src="locus.js"></script>
   <script src="draw.js"></script>
 
