change Pn and Xn by pn and xn

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
               <input class = "sub_checkbox" type="checkbox" id="tandem_mnt" name="Tandem mnt">
             </div>
             <div>
-              <label for="Tandem Xn">Xn</label>
+              <label for="Tandem Xn">pn</label>
               <input class = "sub_checkbox" type="checkbox" id="tandem_xn" name="Tandem Xn">
             </div>
             <div>
@@ -178,7 +178,7 @@
               <input class = "sub_checkbox" type="checkbox" id="tandem_tri" name="Tandem tri">
             </div>
             <div>
-              <label for="Tandem Pn">Pn</label>
+              <label for="Tandem Pn">pn</label>
               <input class = "sub_checkbox" type="checkbox" id="tandem_pn" name="Tandem Pn">
             </div>
           </div>
