--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
     <div id="ui">
       <div class='lab' style='text-align: center'> 
         <p style='color: blue'>
-           Loci of Centers of Ellipse-Mounted Triangles  (<a href=https://dan-reznik.github.io/ellipse-mounted-triangles/ style="color: red;">Learn more</a>)
+           Locus Lab (<a href=https://dan-reznik.github.io/ellipse-mounted-triangles/ style="color: red;">Learn more</a>)
         </p>
       </div>
-     <p class="lab">© 2020 Iverton Darlan &amp; Dan Reznik</p>
+     <!-- <p class="lab">© 2020 Iverton Darlan &amp; Dan Reznik</p> -->
     </div>
   </div>
   
