--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
   </div>
 
   <div class="item title">
-    <div id="ui">
-      <div class='lab' style='text-align: center'> 
-        <p style='color: blue'>
+    <div id="ui" style="height: 90%">
+      <div class='lab' style="height: 100%;"> 
+        <p style='color: blue;font-size: 30px;'>
            Locus Lab (<a href=https://dan-reznik.github.io/ellipse-mounted-triangles/ style="color: red;">Learn more</a>)
         </p>
       </div>
