--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
   <div class="item title">
     <div id="ui" style="height: 90%">
       <div class='lab' style="height: 100%;"> 
-        <p style='color: blue;font-size: 30px;'>
-           Locus Lab (<a href=https://dan-reznik.github.io/ellipse-mounted-triangles/ style="color: red;">Learn more</a>)
+        <p style='color: blue;font-size: 35px;vertical-align: middle;'>
+           Locus Lab (<a href=https://dan-reznik.github.io/ellipse-mounted-triangles/ style="color: red; font-size: 15px;vertical-align: middle;">Learn more</a>)
         </p>
       </div>
      <!-- <p class="lab">© 2020 Iverton Darlan &amp; Dan Reznik</p> -->
