correcting title centralization

--- a/index.html
+++ b/index.html
@@ -117,15 +117,13 @@
     </div>
   </div>
 
-  <div class="item title">
-    <div id="ui" style="height: 90%">
-      <div class='lab' style="height: 100%;"> 
-        <p style='color: blue;font-size: 35px;vertical-align: middle;'>
+  <div class="item title" style="position: relative">
+      <div class='lab'> 
+        <p style='color: blue;font-size: 35px;margin: 0;position: absolute;top: 50%;left: 50%;margin-right: -50%;transform: translate(-50%, -50%)'>
            Locus Lab (<a href=https://dan-reznik.github.io/ellipse-mounted-triangles/ style="color: red; font-size: 15px;vertical-align: middle;">Learn more</a>)
         </p>
       </div>
      <!-- <p class="lab">© 2020 Iverton Darlan &amp; Dan Reznik</p> -->
-    </div>
   </div>
   
 	<div id='menu' class="item selector">
