--- a/index.html
+++ b/index.html
@@ -118,12 +118,14 @@
   </div>
 
   <div class="item title" style="position: relative">
-      <div class='lab'> 
-        <p style='color: blue;font-size: 35px;margin: 0;position: absolute;top: 50%;left: 50%;margin-right: -50%;transform: translate(-50%, -50%)'>
-           Locus Lab (<a href=https://dan-reznik.github.io/ellipse-mounted-triangles/ style="color: red; font-size: 15px;vertical-align: middle;">Learn more</a>)
+    <div id="ui">
+      <div class='lab' style='text-align: center'> 
+        <p style='color: blue'>
+           Loci of Centers of Ellipse-Mounted Triangles  (<a href=https://dan-reznik.github.io/ellipse-mounted-triangles/ style="color: red;">Learn more</a>)
         </p>
       </div>
-     <!-- <p class="lab">© 2020 Iverton Darlan &amp; Dan Reznik</p> -->
+     <p class="lab">© 2020 Iverton Darlan &amp; Dan Reznik</p>
+    </div>
   </div>
   
 	<div id='menu' class="item selector">
