tandem bar: fixed pn=>xn

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
               <input class = "sub_checkbox" type="checkbox" id="tandem_mnt" name="Tandem mnt">
             </div>
             <div>
-              <label for="Tandem Xn">pn</label>
+              <label for="Tandem Xn">xn</label>
               <input class = "sub_checkbox" type="checkbox" id="tandem_xn" name="Tandem Xn">
             </div>
             <div>
