--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <script src="p5.min.js"></script>
-  <script src="sprintf.js"></script>
-  <script src="p5.dom.min.js"></script>
+  <!--<script src="p5.dom.min.js"></script>-->
   <script src="html2canvas.min.js"></script>
   <!-- <script src="quicksettings.min.js"></script> -->
   <!-- <script src="p5.gui.js" type="text/javascript"></script> -->
   <!--Components-->
   <script src="components.js"></script>
+  <script src="sprintf.js"></script>
     
   <!--changing slider thumb clr-->
   <style data="Xn1">
