--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!--Components-->
   <script src="components.js"></script>
   <script src="sprintf.js"></script>
-    
+
   <!--changing slider thumb clr-->
   <style data="Xn1">
     #Xn1::-webkit-slider-thumb{
@@ -61,7 +61,8 @@
   <script src="ellipse-mounted.js"></script>
   <script src="sketch.js"></script>
   <!-- <script src="gauss-jordan.js"></script> -->
-  <script src="https://enkimute.github.io/res/linalg.min.js"></script>
+  <!--<script src="https://enkimute.github.io/res/linalg.min.js"></script>-->
+  <script src="linalg.min.js"></script>
   <script src="ellipse-detect.js"></script>
   <script src="simple-polygon-b.js"></script>
   <script src="configuration_url.js"></script>
