added many lozada triangles

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   <script src="ui.js"></script>
   <script src="poncelet.js"></script>
   <script src="circles.js"></script>
+  <script src="triangles_lozada.js"></script>
   <script src="triangles.js"></script>
   <script src="trilins_barys.js"></script> 
   <script src="xn_1k.js"></script>
