created invariants and chg 1/sum to sum of si^-2

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
 
   <script src="ellipse-mounted.js"></script>
+  <script src="invariants.js"></script>
   <script src="sketch.js"></script>
   <!-- <script src="gauss-jordan.js"></script> -->
   <!--<script src="https://enkimute.github.io/res/linalg.min.js"></script>-->
