--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
   <script src="poncelet.js"></script>
   <script src="circles.js"></script>
   <script src="caustic.js"></script>
+  <script src="subtri.js"></script>
   <script src="triangles_lozada.js"></script>
   <script src="triangles.js"></script>
   <script src="trilins_barys.js"></script> 
