added lester circle

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
   <script src="triangles.js"></script>
   <script src="trilins_barys.js"></script> 
   <script src="xn_1k.js"></script>
+  <script src="xn_extras.js"></script>
   <script src="symmedian.js"></script>
   <script src="export.js"></script>
 
