added triples and quads

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <!--<script src="https://enkimute.github.io/res/linalg.min.js"></script>-->
   <script src="linalg.min.js"></script>
   <script src="ellipse-detect.js"></script>
-  <script src="experiments.js"></script>
+  <script src="concyclic.js"></script>
   <script src="simple-polygon-b.js"></script>
   <script src="configuration_url.js"></script>
 
