--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 </head>
 
 <body oncontextmenu="return false;">
+  <script src="jukebox.js"></script>
   <script src="dicts.js"></script>
   <script src="math.js"></script>
   <script src="ellipse.js"></script>
