split 3 more files, bug fixes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
   <script src="circles.js"></script>
   <script src="caustic.js"></script>
   <script src="triangles_lozada.js"></script>
+  <script src="triangles_basic.js"></script>
   <script src="triangles.js"></script>
+  <script src="triangles_wrt_fixed.js"></script>
   <script src="trilins_barys.js"></script> 
   <script src="xn_1k.js"></script>
   <script src="xn_extras.js"></script>
