added bitang int and ext tris

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
   <script src="triangles_lozada.js"></script>
   <script src="triangles_basic.js"></script>
   <script src="triangles_wrt_fixed.js"></script>
+  <script src="triangles_mine.js"></script>
   <script src="triangles.js"></script>
   <script src="trilins_barys.js"></script> 
   <script src="xn_1k.js"></script>
