--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
   <script src="triangles.js"></script>
   <script src="trilins_barys.js"></script> 
   <script src="xn_1k.js"></script>
+  <script src="xn_9k.js"></script>
   <script src="xn_extras.js"></script>
   <script src="symmedian.js"></script>
   <script src="export.js"></script>
@@ -145,7 +146,7 @@
         <div class="selector_input">
           <div class='input_Xn'>
             <label for="a_input_text">a/b</label>
-            <input type="text" class="demo_Xn" id='a_input_text' value=1.168 name='a_input_text'>
+            <input type="text" class="demo_Xn" id='a_input_text' value=1.618 name='a_input_text'>
             <div class='slider_container'>
               <input type="range" min=1.001 max=4 value=1.618 step=0.001 class="slider" id="a">
             </div>
